--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "my-package",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,13 +10,16 @@
     "axios": "^1.2.1",
     "date-fns": "^2.29.3",
     "json-server": "^0.17.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "serve": "^14.1.2",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.4",
     "web-vitals": "^2.1.4"
@@ -25,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn run build && aws s3 sync build/ s3://991jo"
   },
   "eslintConfig": {
     "extends": [
